--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Quiz on Important Facts</h1>
+
 <div class="quiz-container">
   <div id="quiz"></div>
 </div>
@@ -17,5 +18,8 @@
 <button id="submit">Submit Quiz</button>
 <div id="results"></div>
 <script src="index.js"></script>
+<script type="module" src="./src/index.ts"></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </body>
 </html>
